--- a/app/css/navbar-fixed-top.css
+++ b/app/css/navbar-fixed-top.css
@@ -1,4 +1,60 @@
-body {
-  min-height: 2000px;
-  padding-top: 70px;
+.navbar {
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    border-left: 0px;
+    border-right: 0px;
+    border-radius: 0px;
+    min-height: 70px;
 }
+
+.navbar-default {
+    background-color: transparent;
+}
+
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: #000000;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #000000;
+}
+
+.navbar-brand {
+    padding: 3px 0px 0px 10px;
+}
+
+.fa.fa-circle.fa-0x{
+    font-size: .5em;
+    padding-right: 40px;
+}
+/**
+ * Credits to http://stackoverflow.com/a/20667061
+**/
+.navbar-nav > li > a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    line-height: 110px;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #000000;
+    background-color: transparent;
+}
+
+.navbar-default .navbar-nav > li > a {
+    color: #000000;
+}
+
+@media (max-width: 767px) {
+    .navbar-nav > li > a {
+        line-height: 20px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
