--- a/app/css/main.css
+++ b/app/css/main.css
@@ -14,3 +14,9 @@ body {
     background: none;
     color: #000000;
 }
+
+.footer-social {
+    font-size: 14px !important;
+    font-weight: 900 !important;
+    padding-top: 10px;
+}
