--- a/app/css/sticky-footer.css
+++ b/app/css/sticky-footer.css
@@ -7,7 +7,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 1em;
+    margin-bottom: 7em;
 }
 
 .footer {
@@ -26,9 +26,19 @@ body {
     color: #3a5795;
 }
 
+#content {
+    margin-bottom: 1em;
+}
+
 .social-message {
     color: #000000;
     font-size: .6em !important;
     vertical-align: middle !important;
     padding-top: .25em;
+}
+
+.footer-social {
+    font-size: .7em !important;
+    font-weight: 900 !important;
+    padding-top: 10px;
 }
