--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -61,3 +61,11 @@ body {
         padding-left: 1.7em;
     }
 }
+
+#footer-copyright{
+    margin-top: 1em;
+    margin-bottom: 1em;
+    border-top: 1px solid #000000;
+    font-size: .6em;
+
+}
