--- a/app/css/main.css
+++ b/app/css/main.css
@@ -9,7 +9,7 @@
 }
 
 .full {
-    background: url("../img/background-full.jpg") no-repeat center center fixed;
+    background: url("../img/12.-Court.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
