--- a/app/css/nav-bar.css
+++ b/app/css/nav-bar.css
@@ -54,7 +54,7 @@
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: #cc6633;
+    color: #5F021F;
     background-color: transparent;
 }
 
