Add material page using magnific pop lightbox plugin.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -9,7 +9,7 @@
 }
 
 .full {
-    background: url("../img/background-1920x1080.jpg") no-repeat center center fixed;
+    background: url("../img/backgrounds/background-1920x1080.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -36,4 +36,33 @@ body {
 .panel, .well, .panel-default {
     background-color: transparent;
     border-color: transparent;
+}
+
+/*material page*/
+.image-source-link {
+    color: #98C3D1;
+}
+
+.mfp-with-zoom .mfp-container,
+.mfp-with-zoom.mfp-bg {
+    opacity: 0;
+    -webkit-backface-visibility: hidden;
+    /* ideally, transition speed should match zoom duration */
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.mfp-with-zoom.mfp-ready .mfp-container {
+    opacity: 1;
+}
+
+.mfp-with-zoom.mfp-ready.mfp-bg {
+    opacity: 0.8;
+}
+
+.mfp-with-zoom.mfp-removing .mfp-container,
+.mfp-with-zoom.mfp-removing.mfp-bg {
+    opacity: 0;
 }
