Load page-catalog's js at end of template.

--- a/public/app/css/footer.css
+++ b/public/app/css/footer.css
@@ -20,11 +20,9 @@ body {
     border-top: 1px solid #000000;
     padding-bottom: 1em;
     padding-top: 1em;
+    margin-top: 1em;
 }
 
-#content {
-    margin-bottom: 1em;
-}
 
 .social-message {
     color: #000000;
