--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -19,16 +19,20 @@
         <!-- /.navbar-header -->
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/#">
-                    Αρχική </a></li>
-                <li><a href="/#material"><i class="fa fa-circle fa-0x"></i>
-                    Υλικό </a></li>
-                <li><a href="/#catalog"><i class="fa fa-circle fa-0x"></i>
-                    Κατάλογος </a></li>
-                <li><a href="/#live-events"><i class="fa fa-circle fa-0x"></i>
-                    Ζωντανές Εκδηλώσεις </a></li>
-                <li><a href="/#contact"><i class="fa fa-circle fa-0x"></i>
-                    Επικοινωνία</a></li>
+                <li ng-class="{active: $route.current.activeTab == '/'}">
+                    <a href="/#"> Αρχική </a></li>
+                <li ng-class="{active: $route.current.activeTab == '#material'}">
+                    <a href="/#material"><i class="fa fa-circle fa-0x"></i>
+                        Υλικό </a></li>
+                <li ng-class="{active: $route.current.activeTab == '#catalog'}">
+                    <a href="/#catalog"><i class="fa fa-circle fa-0x"></i>
+                        Κατάλογος </a></li>
+                <li ng-class="{active: $route.current.activeTab == '#live-events'}">
+                    <a href="/#live-events"><i class="fa fa-circle fa-0x"></i>
+                        Ζωντανές Εκδηλώσεις </a></li>
+                <li ng-class="{active: $route.current.activeTab == '#contact'}">
+                    <a href="/#contact"><i class="fa fa-circle fa-0x"></i>
+                        Επικοινωνία</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
