Update catalog's cover page & remove catalog's bar.

--- a/public/partials/catalog.html
+++ b/public/partials/catalog.html
@@ -66,7 +66,7 @@
 
                 <h3>Πρόταση</h3>
 
-                <p>Ο Ευθύμης Καναβός, ο υπεύθυνος στο Stemfyla, προτείνει μεσογειακό ριζότο με τοματίνια, λιαστή
+                <p>Ο Γιώργος Καγιάς, ο υπεύθυνος στο Stemfyla, προτείνει μεσογειακό ριζότο με τοματίνια, λιαστή
                     ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, μοσχαράκι με γλυκό τραχανά και σουτζουκάκια.</p>
 
                 <p>&nbsp;</p>
@@ -87,16 +87,7 @@
                             <div id="fb5-cover">
                                 <ul>
                                     <li><a href="javascript:setPage(2)"><img
-                                            data-src="app/img/catalog/pages/cover-photo1.jpg"></a></li>
-                                    <li><a href="javascript:youtube('zWzRrqEvfPU','560','315')"><img
-                                            data-src="app/img/catalog/pages/cover-photo2.jpg"></a></li>
-                                    <li><a href="javascript:youtube('48I0IHmsuOE','560','315')"><img
-                                            data-src="app/img/catalog/pages/cover-photo5.jpg"></a></li>
-                                    <li><a href="javascript:youtube('48I0IHmsuOE','560','315')"><img
-                                            data-src="app/img/catalog/pages/cover-photo4.jpg"></a></li>
-                                    <li><a href="javascript:youtube('48I0IHmsuOE','560','315')"><img
-                                            data-src="app/img/catalog/pages/cover-photo3.jpg"></a></li>
-
+                                            data-src="app/img/catalog/pages/cover-photo6.jpg"></a></li>
                                 </ul>
                                 <img data-src="app/img/logos/logo-stemfyla-250x250.png" id="fb5-logo-cover">
                             </div>
@@ -311,8 +302,8 @@
 
             <div class="fb5-bcg-tools"></div>
 
-            <a id="fb5-logo" href>
-                <img alt="" src="/app/img/logos/logo-stemfyla-180x295.png">
+            <a id="fb5-logo" href="/#">
+                <img alt="Company Logo" src="/app/img/logos/logo-stemfyla-180x295.png">
             </a>
 
             <div class="fb5-menu" id="fb5-center">
