--- a/public/partials/catalog-2.html
+++ b/public/partials/catalog-2.html
@@ -58,7 +58,6 @@
                         πιάτα
                         που περιλαμβάνει ο κατάλογος τα οποία βγαίνουν πάντα φρεσκομαγειρεμένα.</p>
 
-                    <p>&nbsp;</p>
 
                     <h3>Συνταγές</h3>
 
@@ -66,17 +65,16 @@
                         ένα
                         μυστικό συστατικό το οποίο στον κατάλογο μένει κρυφό.</p>
 
-                    <p>&nbsp;</p>
 
                     <h3>Πρόταση</h3>
 
                     <p>Ο Γιώργος Καγιάς, ο υπεύθυνος στο Stemfyla, προτείνει μεσογειακό ριζότο με τοματίνια, λιαστή
                         ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, μοσχαράκι με γλυκό τραχανά και σουτζουκάκια.</p>
 
-                    <p>&nbsp;</p>
                 </section>
                 <!-- END ABOUT -->
 
+                
                 <!-- BEGIN BOOK -->
                 <div id="fb5-book">
 
@@ -91,23 +89,9 @@
                                 <div id="fb5-cover">
                                     <ul>
                                         <li><a href="javascript:setPage(2)"><img
-                                                data-src="app/img/catalog/pages/cover-photo7.jpg"></a></li>
-                                        <li><a href="javascript:setPage(4)"><img
                                                 data-src="app/img/catalog/pages/cover-photo6.jpg"></a></li>
-                                        <li><a href="javascript:setPage(6)"><img
-                                                data-src="app/img/catalog/pages/cover-photo7.jpg"></a></li>
-                                        <li><a href="javascript:setPage(2)"><img
-                                                data-src="app/img/catalog/pages/cover-photo1.jpg"></a></li>
-                                        <li><a href="javascript:setPage(4)"><img
-                                                data-src="app/img/catalog/pages/cover-photo2.jpg"></a></li>
-                                        <li><a href="javascript:setPage(6)"><img
-                                                data-src="app/img/catalog/pages/cover-photo3.jpg"></a></li>
-                                        <li><a href="javascript:setPage(8)"><img
-                                                data-src="app/img/catalog/pages/cover-photo4.jpg"></a></li>
-                                        <li><a href="javascript:setPage(10)"><img
-                                                data-src="app/img/catalog/pages/cover-photo5.jpg"></a></li>
                                     </ul>
-                                    <img data-src="/app/img/logos/logo-stemfyla-195x150.png" id="fb5-logo-cover">
+                                    <img data-src="app/img/logos/logo-stemfyla-250x250.png" id="fb5-logo-cover">
                                 </div>
                             </div>
                             <!-- end description for page  -->
@@ -316,8 +300,10 @@
             </div>
             <!-- END CONTAINER BOOK -->
 
+
             <!-- BEGIN FOOTER -->
             <div id="fb5-footer">
+
 
                 <div class="fb5-bcg-tools"></div>
 
@@ -422,6 +408,7 @@
             </div>
             <!-- END CONTACT FORM -->
 
+
             <!-- BEGIN ALL PAGES -->
             <div id="fb5-all-pages" class="fb5-overlay row">
 
@@ -467,12 +454,45 @@
 
             </div>
             <!-- END ALL PAGES -->
-
         </div>
         <!-- END HTML BOOK -->
 
-        <!-- CONFIGURATION FLIPBOOK -->
+        <div class="row">
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
+                </a>
+            </div>
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(4)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/4_5_.jpg" alt="Company working day image">
+                </a>
+            </div>
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(6)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/6_7_.jpg" alt="Company working day image">
+                </a>
+            </div>
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(8)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/8_9_.jpg" alt="Company working day image">
+                </a>
+            </div>
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(10)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/10_11_.jpg" alt="Company working day image">
+                </a>
+            </div>
+            <div class="col-lg-2 col-xs-6 col-md-3">
+                <a href="javascript:setPage(12)" class="thumbnail image-link" title="">
+                    <img src="app/img/catalog/pages/thumbs/12_.jpg" alt="Company working day image">
+                </a>
+            </div>
 
+        </div>
+
+
+        <!-- CONFIGURATION FLIPBOOK -->
         <script src="/app/js/catalog/jquery.js"></script>
         <script type="text/javascript">
             var jQuery_1_10_2 = $.noConflict(true);
@@ -486,13 +506,13 @@
             jQuery_1_10_2('#fb5').data('config',
                     {
                         "page_width": "550",
-                        "page_height": "715",
+                        "page_height": "485",
                         "email_form": "office@somedomain.com",
                         "zoom_double_click": "1",
                         "zoom_step": "0.06",
                         "double_click_enabled": "true",
-                        "tooltip_visible": "true",
-                        "toolbar_visible": "falseE",
+                        "tooltip_visible": "false",
+                        "toolbar_visible": "false",
                         "gotopage_width": "30",
                         "deeplinking_enabled": "false",
                         "rtl": "false",
