--- a/public/partials/material.html
+++ b/public/partials/material.html
@@ -2,7 +2,7 @@
 
     <div class="col-lg-2 col-xs-6 col-md-3">
         <a href="app/img/material/stemfyla1.jpg" class="thumbnail image-link" title="">
-            <img src="app/img/material/stemfyla1-lg.jpg" alt="...">
+            <img src="app/img/material/stemfyla1-lg.jpg" alt="Company working day image">
         </a>
     </div>
 
