--- a/public/app/css/catalog/style.css
+++ b/public/app/css/catalog/style.css
@@ -478,7 +478,7 @@
 
 /* =WordPress Core
 -------------------------------------------------------------- */
-#fb5 .fb5-page-book .alignnone, .#fb5-about .alignnone {
+#fb5 .fb5-page-book .alignnone, #fb5-about .alignnone {
     margin: 5px 20px 20px 0;
 }
 
