--- a/public/partials/catalog-3.html
+++ b/public/partials/catalog-3.html
@@ -56,22 +56,17 @@
                     πιάτα
                     που περιλαμβάνει ο κατάλογος τα οποία βγαίνουν πάντα φρεσκομαγειρεμένα.</p>
 
-                <p>&nbsp;</p>
-
                 <h3>Συνταγές</h3>
 
                 <p> Οι δε συνταγές είναι δικές μας και όλες περιλαμβάνουν φρέσκα υλικά ενώ καθεμία από αυτές έχει
                     ένα
                     μυστικό συστατικό το οποίο στον κατάλογο μένει κρυφό.</p>
 
-                <p>&nbsp;</p>
-
                 <h3>Πρόταση</h3>
 
                 <p>Ο Γιώργος Καγιάς, ο υπεύθυνος στο Stemfyla, προτείνει μεσογειακό ριζότο με τοματίνια, λιαστή
                     ντομάτα, φέτα, θυμάρι και φρέσκια ρίγανη, μοσχαράκι με γλυκό τραχανά και σουτζουκάκια.</p>
 
-                <p>&nbsp;</p>
             </section>
             <!-- END ABOUT -->
 
@@ -123,7 +118,7 @@
                 <!-- END PAGE 1 -->
 
                 <!-- BEGIN PAGE 2 -->
-                <div data-background-image="app/img/catalog/pages/2_3.jpg" class="fb5-double fb5-first">
+                <div data-background-image="app/img/catalog/pages/2_3.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -139,7 +134,7 @@
                 <!-- END PAGE 2 -->
 
                 <!-- BEGIN PAGE 3 -->
-                <div data-background-image="app/img/catalog/pages/2_3.jpg" class="fb5-double fb5-second">
+                <div data-background-image="app/img/catalog/pages/4_5.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -155,7 +150,7 @@
                 <!-- END PAGE 3 -->
 
                 <!-- BEGIN PAGE 4 -->
-                <div data-background-image="app/img/catalog/pages/4_5.jpg" class="fb5-double fb5-first">
+                <div data-background-image="app/img/catalog/pages/6_7.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -171,7 +166,7 @@
                 <!-- END PAGE 4 -->
 
                 <!-- BEGIN PAGE 5 -->
-                <div data-background-image="app/img/catalog/pages/4_5.jpg" class="fb5-double fb5-second">
+                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -187,7 +182,7 @@
                 <!-- END PAGE 5 -->
 
                 <!-- BEGIN PAGE 6 -->
-                <div data-background-image="app/img/catalog/pages/6_7.jpg" class="fb5-double fb5-first">
+                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -203,7 +198,7 @@
                 <!-- END PAGE 6 -->
 
                 <!-- BEGIN PAGE 7 -->
-                <div data-background-image="app/img/catalog/pages/6_7.jpg" class="fb5-double fb5-second">
+                <div data-background-image="app/img/catalog/pages/6_7.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -219,7 +214,7 @@
                 <!-- END PAGE 7 -->
 
                 <!-- BEGIN PAGE 8 -->
-                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="fb5-double fb5-first">
+                <div data-background-image="app/img/catalog/pages/10_11.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -235,7 +230,7 @@
                 <!-- END PAGE 8 -->
 
                 <!-- BEGIN PAGE 9 -->
-                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="fb5-double fb5-second">
+                <div data-background-image="app/img/catalog/pages/8_9.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -251,7 +246,7 @@
                 <!-- END PAGE 9 -->
 
                 <!-- BEGIN PAGE 10 -->
-                <div data-background-image="app/img/catalog/pages/10_11.jpg" class="fb5-double fb5-first">
+                <div data-background-image="app/img/catalog/pages/10_11.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -267,7 +262,7 @@
                 <!-- END PAGE 9 -->
 
                 <!-- BEGIN PAGE 11 -->
-                <div data-background-image="app/img/catalog/pages/10_11.jpg" class="fb5-double fb5-second">
+                <div data-background-image="app/img/catalog/pages/empty.jpg" class="">
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
                         <!-- description for page from WYSWIG -->
@@ -282,28 +277,21 @@
                 </div>
                 <!-- END PAGE 10 -->
 
-                <!-- BEGIN PAGE 12 -->
+                <!-- BEGIN PAGE 11 -->
                 <div data-background-image="app/img/catalog/pages/12.jpg" class="">
-
                     <!-- container page book -->
                     <div class="fb5-cont-page-book">
-
                         <!-- description for page from WYSWIG -->
-                        <div class="fb5-page-book">
-
-                        </div>
-
+                        <div class="fb5-page-book"></div>
                         <!-- number page and title for page -->
                         <div class="fb5-meta">
-                            <span class="fb5-num"></span>
-                            <span class="fb5-description"></span>
+                            <span class="fb5-description">Κατάλογος 2014</span>
+                            <span class="fb5-num">11</span>
                         </div>
-
                     </div>
-
+                    <!-- end container page book -->
                 </div>
-                <!-- END PAGE 12 -->
-
+                <!-- END PAGE 10 -->
             </div>
             <!-- END BOOK -->
             <!-- arrows -->
@@ -471,36 +459,115 @@
 
     <!-- CONFIGURATION FLIPBOOK -->
 
-    <script src="/app/js/catalog/jquery.js"></script>
-    <script type="text/javascript">
-        var jQuery_1_10_2 = $.noConflict(true);
-    </script>
-    <script src="/app/js/catalog/turn.js"></script>
-    <script src="/app/js/catalog/jquery.fullscreen.js"></script>
-    <script src="/app/js/catalog/jquery.address-1.6.min.js"></script>
-    <script src="/app/js/catalog/wait.js"></script>
+    <div class="slick-slider-c">
+        <div class="container">
 
-    <script>
-        jQuery_1_10_2('#fb5').data('config',
-                {
-                    "page_width": "550",
-                    "page_height": "715",
-                    "email_form": "office@somedomain.com",
-                    "zoom_double_click": "2",
-                    "zoom_step": "0.06",
-                    "double_click_enabled": "true",
-                    "tooltip_visible": "true",
-                    "toolbar_visible": "false",
-                    "gotopage_width": "30",
-                    "deeplinking_enabled": "false",
-                    "rtl": "false",
-                    'full_area': 'true',
-                    'lazy_loading_thumbs': 'true',
-                    'lazy_loading_pages': 'true'
-                })
-    </script>
-
-    <script src="/app/js/catalog/onload.js"></script>
-
+            <div class="row popup-gallery">
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/front.jpg" alt="Company working day image">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(4)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/4_5_.jpg" alt="Company working day image">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(6)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/6_7_.jpg" alt="Company working day image">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(8)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/8_9_.jpg" alt="Company working day image">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(10)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/10_11_.jpg" alt="Company working day image">
+                    </a>
+                </div>
+                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                    <a href="javascript:setPage(12)" class="thumbnail image-link" title="">
+                        <img src="app/img/catalog/pages/thumbs/12_.jpg" alt="Company working day image">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!-- END FLIPBOOK STRUCTURE -->
+
+<script src="/app/js/catalog/jquery.js"></script>
+<script type="text/javascript">
+    var jQuery_1_10_2 = $.noConflict(true);
+</script>
+<script src="/app/js/catalog/turn.js"></script>
+<script src="/app/js/catalog/jquery.fullscreen.js"></script>
+<script src="/app/js/catalog/jquery.address-1.6.min.js"></script>
+<script src="/app/js/catalog/wait.js"></script>
+<script src="/app/js/catalog/onload.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="app/lib/slick.js/slick/slick.min.js"></script>
+
+<script>
+    jQuery_1_10_2('#fb5').data('config',
+            {
+                "page_width": "700",
+                "page_height": "515",
+                "email_form": "office@somedomain.com",
+                "zoom_double_click": "2",
+                "zoom_step": "0.06",
+                "double_click_enabled": "true",
+                "tooltip_visible": "false",
+                "toolbar_visible": "false",
+                "gotopage_width": "30",
+                "deeplinking_enabled": "false",
+                "rtl": "false",
+                'full_area': 'true',
+                'lazy_loading_thumbs': 'true',
+                'lazy_loading_pages': 'true'
+            })
+
+    $(document).ready(function () {
+
+        $('.slick-slider-c').slick({
+            dots: false,
+            infinite: false,
+            speed: 300,
+            slidesToShow: 1,
+            slidesToScroll: 4,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                        infinite: true,
+                        dots: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+    });
+</script>
