--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -26,7 +26,9 @@
             </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                 <li ng-class="{active: $route.current.activeTab == '#catalog-2'}" role="presentation">
-                    <a role="menuitem" tabindex="-1" href="/#catalog-2">2η Έκδοση</a></li>
+                    <a role="menuitem" href="/#catalog-2">2η Έκδοση</a></li>
+                <li ng-class="{active: $route.current.activeTab == '#catalog-3'}" role="presentation">
+                    <a role="menuitem" href="/#catalog-3">3η Έκδοση</a></li>
             </ul>
         </div>
 
