Minor improvmenents on catalog page.

--- a/public/partials/catalog-3.html
+++ b/public/partials/catalog-3.html
@@ -463,37 +463,37 @@
         <div class="container">
 
             <div class="row popup-gallery">
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1  col-md-2 col-sm-2 col-xs-6">
                     <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/front.jpg" alt="Company working day image">
                     </a>
                 </div>
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
                     <a href="javascript:setPage(2)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/2_3_.jpg" alt="Company working day image">
                     </a>
                 </div>
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
                     <a href="javascript:setPage(4)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/4_5_.jpg" alt="Company working day image">
                     </a>
                 </div>
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
                     <a href="javascript:setPage(6)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/6_7_.jpg" alt="Company working day image">
                     </a>
                 </div>
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
                     <a href="javascript:setPage(8)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/8_9_.jpg" alt="Company working day image">
                     </a>
                 </div>
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
                     <a href="javascript:setPage(10)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/10_11_.jpg" alt="Company working day image">
                     </a>
                 </div>
-                <div class="col-lg-2 col-xs-4 col-md-1 col-sm-2">
+                <div class="col-lg-1 col-xs-6 col-md-2 col-sm-2">
                     <a href="javascript:setPage(12)" class="thumbnail image-link" title="">
                         <img src="app/img/catalog/pages/thumbs/12_.jpg" alt="Company working day image">
                     </a>
