--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -124,7 +124,7 @@ a {
 }
 
 .slick-slider-c {
-    background: none repeat scroll 0 0 #000000;
+    background: none repeat scroll 0 0 rgba(95, 2, 31, 0.8);
     box-shadow: 0 0 40px rgba(95, 2, 31, 0.8);
 }
 
